fix overflow

--- a/apps/site/styles/globals.css
+++ b/apps/site/styles/globals.css
@@ -6,7 +6,6 @@ body,
   background-color: #fbe8d3;
   height: 100%;
   margin: 0;
-  overflow: hidden;
 }
 
 .split {
